# netscape-link-extractor

./: Cargo.toml  readme.md
src/: args.rs  main.rs  parse.rs  render.rs
templates/: bookmarks.hbs
