[package]
name = "netscape-link-extractor"
description = "a script to extract bookmarks from netscape bookmarks file"
authors = ["eshdownbad"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.11", features = ["derive"] }
handlebars = "4.3.7"
once_cell = "1.18.0"
regex = "1.9.0"
serde = { version = "1.0.166", features = ["derive"] }
serde_json = "1.0.100"
tokio = { version = "1.29.1", features = ["full"] }
url = "2.4.0"
